force-app/main/default/objects/vente__c/vente__c.object-meta.xml
<CustomObject>
    <label>vente</label>
    <nameField>
        <label>test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ventes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>