force-app/main/default/objects/vente__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <type>Date</type>
</CustomField>