force-app/main/default/objects/vente__c/fields/qte__c.field-meta.xml
<CustomField>
    <fullName>qte__c</fullName>
    <label>qte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>