force-app/main/default/objects/vente__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <label>total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>